Fix dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,25 @@
 @use "../node_modules/@angular/material/index" as mat;
 
+// Dark theme variables
+$dark-bg-color: #222;
+$semi-dark-bg-color: #333;
+$light-text-color: #cacaca;
+
+// Light theme variables
+$light-bg-color: #d2d2d2;
+$semi-light-bg-color: #c0c0c0;
+$dark-text-color: #333;
+
+.dark body {
+  background-color: $semi-dark-bg-color;
+  color: $light-text-color;
+}
+
+.light body {
+  background-color: $light-bg-color;
+  color: $dark-text-color;
+}
+
 // Light Theme
 $light-theme-primary: mat.m2-define-palette(mat.$m2-indigo-palette);
 $light-theme-accent: mat.m2-define-palette(mat.$m2-purple-palette, A200, A100, A400);
